--- a/beoordelingenlijst.html
+++ b/beoordelingenlijst.html
@@ -39,8 +39,8 @@
         <button class="knop" id="knop1" onclick="rekenCijfer()">Toevoegen</button>
         <br>
         <br>
-        <input class="input" id="input2" type="number" placeholder="Toets Cijfer">
-        <button class="knop" id="knop2" onclick="myFunction1()">Toevoegen</button>
+        <input class="input" id="input2" type="number" placeholder="Oordeel Cijfer">
+        <button class="knop" id="knop2" onclick="rekenOordeel()">Toevoegen</button>
 
     </div>
     <div class="standaardDiv" id="resultaat"></div>
